yew-macro/tests/derive_props/fail.stderr
error: unexpected end of input, expected expression
  --> $DIR/fail.rs:57:18
   |
57 |         #[prop_or()]
   |                  ^^

error: cannot find attribute `props` in this scope
  --> $DIR/fail.rs:22:11
   |
22 |         #[props(default)]
   |           ^^^^^

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/fail.rs:87:24
   |
87 |         #[prop_or_else(foo)]
   |                        ^^^ not found in this scope
   |
help: consider importing one of these items
   |
83 |     use crate::t10::foo;
   |
83 |     use crate::t9::foo;
   |

error[E0277]: the trait bound `t1::Value: std::default::Default` is not satisfied
 --> $DIR/fail.rs:9:21
  |
9 |     #[derive(Clone, Properties)]
  |                     ^^^^^^^^^^ the trait `std::default::Default` is not implemented for `t1::Value`
  |
  = note: required by `std::option::Option::<T>::unwrap_or_default`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `build` found for struct `t3::PropsBuilder<t3::PropsBuilderStep_missing_required_prop_value>` in the current scope
  --> $DIR/fail.rs:35:26
   |
29 |     #[derive(Clone, Properties)]
   |                     ---------- method `build` not found for this
...
35 |         Props::builder().build();
   |                          ^^^^^ method not found in `t3::PropsBuilder<t3::PropsBuilderStep_missing_required_prop_value>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `build`, perhaps you need to implement it:
           candidate #1: `proc_macro::bridge::server::TokenStreamBuilder`

error[E0599]: no method named `b` found for struct `t4::PropsBuilder<t4::PropsBuilderStep_missing_required_prop_a>` in the current scope
  --> $DIR/fail.rs:48:26
   |
41 |     #[derive(Clone, Properties)]
   |                     ---------- method `b` not found for this
...
48 |         Props::builder().b(1).a(2).build();
   |                          ^ help: there is an associated function with a similar name: `a`

error[E0308]: mismatched types
  --> $DIR/fail.rs:67:19
   |
67 |         #[prop_or(123)]
   |                   ^^^
   |                   |
   |                   expected struct `std::string::String`, found integer
   |                   help: try using a conversion method: `123.to_string()`

error[E0277]: expected a `std::ops::FnOnce<()>` closure, found `{integer}`
   --> $DIR/fail.rs:77:24
    |
77  |         #[prop_or_else(123)]
    |                        ^^^ expected an `FnOnce<()>` closure, found `{integer}`
    |
    = help: the trait `std::ops::FnOnce<()>` is not implemented for `{integer}`
    = note: wrap the `{integer}` in a closure with no arguments: `|| { /* code */ }

error[E0593]: function is expected to take 0 arguments, but it takes 1 argument
   --> $DIR/fail.rs:97:24
    |
97  |         #[prop_or_else(foo)]
    |                        ^^^ expected function that takes 0 arguments
...
101 |     fn foo(bar: i32) -> String {
    |     -------------------------- takes 1 argument

error[E0271]: type mismatch resolving `<fn() -> i32 {t10::foo} as std::ops::FnOnce<()>>::Output == std::string::String`
   --> $DIR/fail.rs:111:24
    |
111 |         #[prop_or_else(foo)]
    |                        ^^^ expected struct `std::string::String`, found `i32`
    |
    = note: required by `std::option::Option::<T>::unwrap_or_else`
